==> dmiddlecamp/particle_arducam/firmware/libraries/ArduCAM.cpp <==
    #include "ArduCAM.h"
    #include "Arduino.h"
    #include "memorysaver.h"
    #include "Arduino.h"
    #include "ArduCAM.h"
    #include <Wire.h>
    #include <SPI.h>
    #define Wire Wire1

int ArduCAM::bus_write(int address, int value) {
  // take the SS pin low to select the chip:
#if defined (SPARK)
  SPI.beginTransaction(SPISettings(8*MHZ, MSBFIRST, SPI_MODE0));
  //cbi(_CS, B_CS);
  pinLO(A2);    // TODO: FIX HACK!
#else
  cbi(P_CS, B_CS);
#endif
  //  send in the address and value via SPI:
  SPI.transfer(address);
  SPI.transfer(value);
  // take the SS pin high to de-select the chip:
#if defined (SPARK)
	//sbi(_CS, B_CS);
	pinHI(A2);  // TODO: FIX HACK!
	SPI.endTransaction();
#else
	sbi(P_CS, B_CS);
#endif

    return 1;
}

uint8_t ArduCAM::bus_read(int address) {
  uint8_t value = 0;
  // take the SS pin low to select the chip:
#if defined (SPARK)
  SPI.beginTransaction(SPISettings(8*MHZ, MSBFIRST, SPI_MODE0));
  //cbi(_CS, B_CS);
  pinLO(A2);    // TODO: FIX HACK!
#else
  cbi(P_CS, B_CS);
#endif
  //  send in the address and value via SPI:
  SPI.transfer(address);
  value = SPI.transfer(0x00);
  // take the SS pin high to de-select the chip:
#if defined (SPARK)
//	sbi(_CS, B_CS);
	pinHI(A2);  // TODO: FIX HACK!
	SPI.endTransaction();
#else
	sbi(P_CS, B_CS);
#endif
  return value;
}

void ArduCAM::set_fifo_burst()
{
	#if defined (RASPBERRY_PI)
	transfer(BURST_FIFO_READ);
	#else
    SPI.transfer(BURST_FIFO_READ);
   #endif
}

void ArduCAM::CS_HIGH(void)
{
    #if defined (SPARK)
	    pinHI(A2);  // TODO: FIX HACK!
    #else
        sbi(P_CS, B_CS);
    #endif
}

void ArduCAM::CS_LOW(void)
{
    #if defined (SPARK)
	    pinLO(A2);  // TODO: FIX HACK!
    #else
        cbi(P_CS, B_CS);
    #endif
}

byte ArduCAM::wrSensorReg8_8(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID & 0x00FF);
	Wire.write(regDat & 0x00FF);

	if(Wire.endTransmission())
	{
		return 0;
	}

	delay(1);
  	return(1);
}

byte ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t* regDat)
{

	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID & 0x00FF);
	Wire.endTransmission();

	Wire.requestFrom((sensor_addr >> 1),1);
	if(Wire.available())
		*regDat = Wire.read();

	delay(1);
  	return(1);
}

byte ArduCAM::wrSensorReg8_16(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID & 0x00FF);

	Wire.write(regDat >> 8);            // sends data byte, MSB first
  	Wire.write(regDat & 0x00FF);

	if(Wire.endTransmission())
	{
		return 0;
	}

	delay(1);
  	return(1);
}

byte ArduCAM::rdSensorReg8_16(uint8_t regID, uint16_t* regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID);
	Wire.endTransmission();

	Wire.requestFrom((sensor_addr >> 1),2);
	if(Wire.available())
	{
		*regDat = Wire.read();
		*regDat++ = Wire.read();
	}

	delay(1);
  	return(1);
}

byte ArduCAM::wrSensorReg16_8(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID >> 8);            // sends instruction byte, MSB first
  	Wire.write(regID & 0x00FF);
  	Wire.write(regDat & 0x00FF);

	if(Wire.endTransmission())
	{
		return 0;
	}

	delay(1);
  	return(1);
}

byte ArduCAM::rdSensorReg16_8(uint16_t regID, uint8_t* regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID >> 8);
	Wire.write(regID & 0x00FF);
	Wire.endTransmission();

	Wire.requestFrom((sensor_addr >> 1),1);
	if(Wire.available())
	{
		*regDat = Wire.read();
	}
	delay(1);
  	return(1);
}

byte ArduCAM::wrSensorReg16_16(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);

	Wire.write(regID >> 8);            // sends instruction byte, MSB first
  	Wire.write(regID & 0x00FF);

  	Wire.write(regDat >> 8);            // sends data byte, MSB first
  	Wire.write(regDat & 0x00FF);

	if(Wire.endTransmission())
	{
		return 0;
	}

	delay(1);
  	return(1);
}

byte ArduCAM::rdSensorReg16_16(uint16_t regID, uint16_t* regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID >> 8);
	Wire.write(regID & 0x00FF);
	Wire.endTransmission();

	Wire.requestFrom((sensor_addr >> 1),2);
	if(Wire.available())
	{
		*regDat = Wire.read();
		*regDat++ = Wire.read();
	}

	delay(1);
  	return(1);
}
