==> edgeimpulse/firmware-silabs-xg24/src/drivers/ArduCAM_OV2640/ArduCAM.cpp <==
#include "ArduCAM.h"
#include <cstdio>
#include "edge-impulse-sdk/porting/ei_classifier_porting.h"
#include "em_cmu.h"
#include "em_eusart.h"
#include "em_gpio.h"
#include "sl_i2cspm.h"
#include "sl_i2cspm_instances.h"
#include "sl_sleeptimer.h"
#define CAM_SPI EUSART1
#define CAM_SPI_PORT_MOSI gpioPortC
#define CAM_SPI_PIN_MOSI  3
#define CAM_SPI_PORT_MISO gpioPortC
#define CAM_SPI_PIN_MISO  2
#define CAM_SPI_PORT_SCLK gpioPortC
#define CAM_SPI_PIN_SCLK  1
#define CAM_SPI_PORT_CS   gpioPortD
#define CAM_SPI_PIN_CS    2

void ArduCAM::set_fifo_burst()
{
    EUSART_Spi_TxRx(CAM_SPI, BURST_FIFO_READ);
}

void ArduCAM::CS_HIGH(void)
{
    GPIO_PinOutSet(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
}

void ArduCAM::CS_LOW(void)
{
    GPIO_PinOutClear(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
}

uint8_t ArduCAM::bus_write(int address, int value)
{
    GPIO_PinOutClear(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
    EUSART_Spi_TxRx(CAM_SPI, address);
    EUSART_Spi_TxRx(CAM_SPI, value);
    GPIO_PinOutSet(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
    return 1;
}

uint8_t ArduCAM::bus_read(int address)
{
    uint8_t value;
    GPIO_PinOutClear(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
    EUSART_Spi_TxRx(CAM_SPI, address);
    value = EUSART_Spi_TxRx(CAM_SPI, 0x00);
    // take the SS pin high to de-select the chip:
    GPIO_PinOutSet(CAM_SPI_PORT_CS, CAM_SPI_PIN_CS);
    return value;
}

uint8_t ArduCAM::wrSensorReg8_8(uint8_t regID, uint8_t regDat)
{
    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_WRITE;
    seq.buf[0].data = &regID;
    seq.buf[0].len = 1;
    seq.buf[1].data = &regDat;
    seq.buf[1].len = 1;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t *regDat)
{
    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_READ;
    seq.buf[0].data = &regID;
    seq.buf[0].len = 1;
    seq.buf[1].data = regDat;
    seq.buf[1].len = 1;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::wrSensorReg8_16(uint8_t regID, uint16_t regDat)
{
    uint8_t buf[2];
    buf[0] = regDat >> 8;
    buf[1] = regDat & 0x00ff;

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_WRITE;
    seq.buf[0].data = &regID;
    seq.buf[0].len = 1;
    seq.buf[1].data = buf;
    seq.buf[1].len = 2;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::rdSensorReg8_16(uint8_t regID, uint16_t *regDat)
{
    uint8_t buf[2];

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_READ;
    seq.buf[0].data = &regID;
    seq.buf[0].len = 1;
    seq.buf[1].data = buf;
    seq.buf[1].len = 2;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    *regDat = (buf[0] << 8) | buf[1];

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::wrSensorReg16_8(uint16_t regID, uint8_t regDat)
{
    uint8_t buf[2];
    buf[0] = regID >> 8;
    buf[1] = regID & 0x00ff;

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_WRITE;
    seq.buf[0].data = buf;
    seq.buf[0].len = 2;
    seq.buf[1].data = &regDat;
    seq.buf[1].len = 1;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::rdSensorReg16_8(uint16_t regID, uint8_t *regDat)
{
    uint8_t buf[2];
    buf[0] = regID >> 8;
    buf[1] = regID & 0x00ff;

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_READ;
    seq.buf[0].data = buf;
    seq.buf[0].len = 2;
    seq.buf[1].data = regDat;
    seq.buf[1].len = 1;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::wrSensorReg16_16(uint16_t regID, uint16_t regDat)
{
    uint8_t bufAddr[2];
    uint8_t bufData[2];
    bufAddr[0] = regID >> 8;
    bufAddr[1] = regID & 0x00ff;
    bufData[0] = regDat >> 8;
    bufData[1] = regDat & 0x00ff;

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_WRITE;
    seq.buf[0].data = bufAddr;
    seq.buf[0].len = 2;
    seq.buf[1].data = bufData;
    seq.buf[1].len = 2;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    return ret == i2cTransferDone ? 0 : 1;
}

uint8_t ArduCAM::rdSensorReg16_16(uint16_t regID, uint16_t *regDat)
{
    uint8_t bufAddr[2];
    uint8_t bufData[2];
    bufAddr[0] = regID >> 8;
    bufAddr[1] = regID & 0x00ff;

    /* Transfer structure */
    I2C_TransferSeq_TypeDef seq;
    I2C_TransferReturn_TypeDef ret;

    /* Initializing I2C transfer */
    seq.addr = sensor_addr;
    seq.flags = I2C_FLAG_WRITE_READ;
    seq.buf[0].data = bufAddr;
    seq.buf[0].len = 2;
    seq.buf[1].data = bufData;
    seq.buf[1].len = 2;

    ret = I2CSPM_Transfer(sl_i2cspm_cam, &seq);

    *regDat = (bufData[0] << 8) | bufData[1];

    return ret == i2cTransferDone ? 0 : 1;
}
